Fix width of widgets on smaller viewports

--- a/src/styles/_widget-board.scss
+++ b/src/styles/_widget-board.scss
@@ -13,6 +13,6 @@
   margin: 0 10px;
   margin-bottom: 20px;
   border-radius: 20px;
-  padding: 10px 0;
+  padding: 10px 10px;
   background-color: rgba(#000, 0.1);
 }
