--- a/src/styles/_widget.scss
+++ b/src/styles/_widget.scss
@@ -3,8 +3,9 @@
   position: relative;
   min-width: 100px;
   width: 300px;
+  max-width: 100%;
   min-height: 100px;
-  margin: 10px;
+  margin: 10px 0;
   border-radius: 10px;
   padding: 20px;
   background-color: rgba(#000, 0.2);
